# quantrisk

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
dashboard/: app.py  data_source.py  export_utils.py  sidebar.py
dashboard/pages/: 10_Regime_Detection.py  11_Options_Greeks.py  11_Transaction_Portfolio.py  1_Portfolio_Overview.py  2_Holdings.py  2_Risk_Metrics.py  3_Risk_Metrics.py  3_VaR_Deep_Dive.py  4_Stress_Testing.py  4_VaR_Deep_Dive.py  5_Factor_Analysis.py  5_Stress_Testing.py  6_Backtesting.py  6_Factor_Analysis.py  7_Backtesting.py  7_Portfolio_Optimisation.py  8_Portfolio_Optimisation.py  9_Live_Risk_Monitor.py
data/: demo_transactions.csv
quantrisk/: __init__.py  __main__.py  config.py
quantrisk/backtesting/: engine.py  evaluation.py  strategies.py
quantrisk/derivatives/: black_scholes.py
quantrisk/factor_models/: attribution.py  fama_french.py  pca_factors.py
quantrisk/ingestion/: data_validator.py  macro_data.py  market_data.py  trading212.py
quantrisk/portfolio/: optimizer.py  portfolio.py  returns.py  transactions.py
quantrisk/regime/: hmm.py
quantrisk/risk/: cvar.py  drawdown.py  metrics.py  var.py
quantrisk/stress_testing/: historical_scenarios.py  (+2 more)
scripts/: generate_demo_data.py
tests/: conftest.py  test_black_scholes.py  test_data_validator.py  test_factor_models.py  test_metrics.py  test_optimizer.py  test_plotting.py  test_portfolio.py  test_regime.py  test_strategies.py  test_stress_testing.py  test_transactions.py  test_var.py
(+2 files in other folders)
