[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantrisk"
version = "0.1.0"
description = "A professional-grade portfolio risk analytics platform"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    # Data ingestion
    "yfinance>=0.2.50",
    "fredapi>=0.5.2",
    "pandas-datareader>=0.10.0",
    # Core data
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    # ML / factor models
    "scikit-learn>=1.4.0",
    # Visualisation
    "plotly>=5.20.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0",
    # Dashboard
    "streamlit>=1.32.0",
    # Storage
    "sqlalchemy>=2.0.0",
    # Config
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    # Optimisation
    "cvxpy>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
quantrisk = "quantrisk.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["quantrisk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=quantrisk --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
